--- a/css/styles.css
+++ b/css/styles.css
@@ -644,7 +644,7 @@ button.btn--google:hover,
 }
 .btn-change:hover{
   -webkit-transform: scale(1.1);
-  background: #31708f;
+  background: #5aaeca;
 }
 
 .navigation {
