--- a/css/app16.css
+++ b/css/app16.css
@@ -145,15 +145,17 @@
   display: inline-block;
   vertical-align: middle;
   line-height: 1;
-  display: none;
+  margin-left: 20px;
+  margin-top: -7px;
+  /* display: none; */
 }
 
 .item__delete--btn:focus { outline: none; }
 .item__delete--btn:active { transform: translateY(2px); }
 
-.item:hover .item__delete--btn { display: block; }
-.item:hover .item__value { transform: translateX(-20px); }
-.item:hover .item__percentage { transform: translateX(-20px); }
+/* .item:hover .item__delete--btn { display: block; } */
+/* .item:hover .item__value { transform: translateX(-20px); }
+.item:hover .item__percentage { transform: translateX(-20px); } */
 
 
 .unpaid {
